[package]
name = "force_graph"
version = "0.3.2"
description = "Force-directed graph algorithm"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/force-graph-rs"
license = "MIT"
edition = "2018"

[dependencies]
petgraph = "0.8.3"

[dev-dependencies]
macroquad = "0.4.14"
